--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="buiufeio.png" alt="logo da alura start">
         <ul>
             <li>Escola</li>
             <li>estudante</li>
