--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="buiufeio.png" alt="logo da alura start">
         <ul>
-            <li>Escola</li>
-            <li>estudante</li>
+            <li>imagens</li>
+            <li>só imagens</li>
         </ul>
     </header>
 </body>
