--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="buiufeio.png" alt="logo da alura start">
         <ul>
-            <li>imagens</li>
+            <li>imagens do buiu</li>
             <li>só imagens</li>
         </ul>
     </header>
